Fix spacing of nav buttons on main pages

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
 body {
     padding: 0%;
+    padding-bottom:10vh;
 }
 
 #view_toggle {
